update: add Datadog receiver configuration to otel-collector-config.yaml

--- a/melt/otel-collector-config.yaml
+++ b/melt/otel-collector-config.yaml
@@ -14,7 +14,9 @@ receivers:
         cors:
           allowed_origins:
             - "*"
-
+  datadog:
+    endpoint: 0.0.0.0:8126
+    read_timeout: 60s
 
 # ::::::::::::::::::::::::::::::::::::::::::::::::::::::
 # Processors
