build(Makefile): add Makefile for managing Docker Compose and Flutter tasks chore(compose.yml): remove obsolete Docker Compose file refactor(collector-cloud-config.yaml): simplify and clean up configuration feat(collector-edge-config copy 2.yaml): add new collector edge config for experiments feat(collector-edge-config copy.yaml): add new collector edge config with spanmetrics and transform processors feat(collector-edge-demo.yaml): add new collector edge demo config with file storage extension
refactor(config): remove unused configurations and simplify collector-edge-config.yaml
feat(compose): add docker-compose file for OpenTelemetry setup

--- a/opentelemetry/collector-cloud/experiments/collector-edge-config copy 2.yaml
+++ b/opentelemetry/collector-cloud/experiments/collector-edge-config copy 2.yaml
@@ -6,12 +6,30 @@ receivers:
     protocols:
       grpc:
       http:
+        cors:
+          allowed_origins:
+            - "http://*"
+            - "https://*"
 
 # ::::::::::::::::::::::::::::::::::::::::::::::::::::::
 # Processors
 # ::::::::::::::::::::::::::::::::::::::::::::::::::::::
 processors:
   batch:
+#  spanmetrics:
+#    metrics_exporter: prometheus
+  # temporary measure until description is fixed in .NET
+  # transform:
+  #   metric_statements:
+  #     - context: metric
+  #       statements:
+  #         - set(description, "Measures the duration of inbound HTTP requests") where name == "http.server.duration"
+  filter:
+    metrics:
+      exclude:
+        match_type: strict
+        metric_names:
+          - queueSize
 
 # ::::::::::::::::::::::::::::::::::::::::::::::::::::::
 # Exporters
@@ -47,15 +65,24 @@ exporters:
 # ::::::::::::::::::::::::::::::::::::::::::::::::::::::
 # Service
 # ::::::::::::::::::::::::::::::::::::::::::::::::::::::
-
 service:
+  # extensions: [health_check, pprof, zpages]
   pipelines:
     traces:
       receivers: [otlp]
       processors: [batch]
-      exporters: [logging]
+      exporters: 
+        - file
+        - logging
+        - otlp
     metrics:
       receivers: [otlp]
+      processors: [filter, batch]
+      exporters: 
+        - file
+        - logging
+        # - prometheus
+    logs:
+      receivers: [otlp]
       processors: [batch]
-      exporters: [logging]
-
+      exporters: [file, logging]
