--- a/opentelemetry/collector-edge/config/collector-edge-config.yaml
+++ b/opentelemetry/collector-edge/config/collector-edge-config.yaml
@@ -1,45 +1,95 @@
 # ::::::::::::::::::::::::::::::::::::::::::::::::::::::
+# Extensions
+# ::::::::::::::::::::::::::::::::::::::::::::::::::::::
+extensions:
+#   health_check:
+#   pprof:
+  file_storage:
+  file_storage/all_settings:
+    directory: /data/store/
+    timeout: 1s
+    compaction:
+      on_start: true
+      directory: /data/compress/
+      max_transaction_size: 65_536
+    #fsync: false
+
+# ::::::::::::::::::::::::::::::::::::::::::::::::::::::
 # Receivers
 # ::::::::::::::::::::::::::::::::::::::::::::::::::::::
 receivers:
   otlp:
     protocols:
       grpc:
+        endpoint: localhost:4317
       http:
-
+        endpoint: localhost:4318
+        cors:
+          allowed_origins:
+            - "http://*"
+            - "https://*"
 # ::::::::::::::::::::::::::::::::::::::::::::::::::::::
 # Processors
 # ::::::::::::::::::::::::::::::::::::::::::::::::::::::
 processors:
   batch:
+  filter:
+    metrics:
+      exclude:
+        match_type: strict
+        metric_names:
+          - queueSize
+  memory_limiter:
+    # 75% of maximum memory up to 2G
+    limit_mib: 1536
+    # 25% of limit up to 2G
+    spike_limit_mib: 512
+    check_interval: 5s
 
 # ::::::::::::::::::::::::::::::::::::::::::::::::::::::
 # Exporters
 # ::::::::::::::::::::::::::::::::::::::::::::::::::::::
 exporters:
   otlp:
-    endpoint: otel-collector-cloud:4317
-
-
-# ::::::::::::::::::::::::::::::::::::::::::::::::::::::
-# Extensions
-# ::::::::::::::::::::::::::::::::::::::::::::::::::::::
-# extensions:
-#   health_check:
-#   pprof:
-#   zpages:
-
+    endpoint: collector-cloud:4317
+    tls:
+      insecure: true
+  logging:
+  file:
+    path: /logs/collector.json
+  debug:
+    verbosity: detailed
 
 # ::::::::::::::::::::::::::::::::::::::::::::::::::::::
 # Service
 # ::::::::::::::::::::::::::::::::::::::::::::::::::::::
 service:
+  extensions: [file_storage, file_storage/all_settings]
   pipelines:
-    traces:
-      receivers: [otlp]
-      processors: [batch]
-      exporters: [otlp]
     metrics:
       receivers: [otlp]
-      processors: [batch]
-      exporters: [otlp]
+      processors: 
+        - memory_limiter
+        - filter
+        - batch
+      exporters: 
+        - file
+        - logging
+        - otlp
+    logs:
+      receivers: [otlp]
+      processors: 
+        - memory_limiter
+        - batch
+      exporters: 
+        - file
+        - logging
+    traces:
+      receivers: [otlp]
+      processors: 
+        - memory_limiter
+        - batch
+      exporters: 
+       - file
+       - logging
+       - otlp
