--- a/opentelemetry/compose.yml
+++ b/opentelemetry/compose.yml
@@ -21,11 +21,12 @@ services:
     ports:
       - 4317:4317 # OTLP gRPC receiver
       - 4318:4318 # OTLP http receiver
+      - "55681:55681" # OTLP HTTP port for external access
 #      - 1888:1888 # pprof extension
 #      - 8888:8888 # Prometheus metrics exposed by the Collector
 #      - 8889:8889 # Prometheus exporter metrics
 #      - 13133:13133 # health_check extension
-     # - 55679:55679 # zpages extension
+      - 55679:55679 # zpages extension
     networks:
       - otel
 
@@ -34,13 +35,14 @@ services:
     environment:
       - COLLECTOR_OTLP_ENABLED=true
     ports:
-      - "5778:5778"
+      - "5775:5775/udp"
       - "6831:6831/udp"
       - "6832:6832/udp"
-      - "9411:9411"
-      - "14250:14250"
-      - "14268:14268"
+      - "5778:5778"
       - "16686:16686"
+      - "14268:14268"
+      - "14250:14250"
+      - "14269:14269"
+      - "9411:9411"
     networks:
       - otel
-
