chore(Makefile): remove alt target to simplify Makefile refactor(main.dart): clean up and simplify tracer provider initialization feat(collector-edge): add new collector-edge-working.yaml for experiments chore(collector-edge): comment out otlp exporter in config feat(compose.yml): add ports for OTLP gRPC and HTTP receivers chore: remove obsolete docker-compose.yml file

--- a/opentelemetry/collector-edge/config/collector-edge-config.yaml
+++ b/opentelemetry/collector-edge/config/collector-edge-config.yaml
@@ -65,7 +65,7 @@ service:
       exporters: 
         - file
         - logging
-        - otlp
+        # - otlp
     logs:
       receivers: [otlp]
       processors: 
@@ -82,4 +82,4 @@ service:
       exporters: 
        - file
        - logging
-       - otlp
+       # - otlp
