fix(config): remove hardcoded OTLP endpoints to use default settings feat(config): add OTLP exporter for metrics and logs to enhance observability
feat(logs): add initial collector.json with sample OpenTelemetry data

Add sample OpenTelemetry data to collector.json for initial setup.

feat(config): enable OTLP exporter in collector-edge-config.yaml

fix(logs): update collector.json with new trace and span data

Update the log data to reflect the latest trace and span information.

test: update trace data with new span and event details

Update trace data to include new span and event details for better
observability and debugging.

--- a/opentelemetry/collector-cloud/config/collector-cloud-config.yaml
+++ b/opentelemetry/collector-cloud/config/collector-cloud-config.yaml
@@ -5,9 +5,7 @@ receivers:
   otlp:
     protocols:
       grpc:
-        endpoint: localhost:4317
       http:
-        endpoint: localhost:4318
         cors:
           allowed_origins:
             - "*"
@@ -56,11 +54,13 @@ service:
       processors: [filter, batch]
       exporters: 
         - file
+        - otlp
     logs:
       receivers: [otlp]
       processors: [batch]
       exporters: 
         - file
+        - otlp
     traces:
       receivers: [otlp]
       processors: [batch]
