docs(README.md): add detailed documentation for queued_retry processor in OpenTelemetry Collector fix(config): format processors list in collector-cloud-config.yaml for better readability
chore(collector.json): remove outdated collector.json file to clean up repository
feat(config): add file_storage extension and settings to collector-edge-config.yaml for enhanced data storage
feat(config): add queued_retry processor to handle retries in collector-edge-config.yaml
fix(config): uncomment otlp exporter in collector-edge-config.yaml to enable OTLP export

chore(logs): remove outdated collector.json file to clean up repository

fix(compose.yml): add dependency on collector-edge for collector-cloud service to ensure proper startup order

--- a/opentelemetry/collector-cloud/config/collector-cloud-config.yaml
+++ b/opentelemetry/collector-cloud/config/collector-cloud-config.yaml
@@ -51,7 +51,9 @@ service:
   pipelines:
     metrics:
       receivers: [otlp]
-      processors: [filter, batch]
+      processors: 
+        - filter
+        - batch
       exporters: 
         - file
         - otlp
