feat(config): add endpoints for grpc and http protocols in collector config
chore(config): comment out otlp exporter in collector config

feat(logs): add sample log data to collector.json for testing purposes

feat(config): enable health_check, pprof, and zpages extensions in collector-edge-config.yaml
fix(config): correct OTLP endpoint port from 4317 to 4217 in collector-edge-config.yaml
chore(config): uncomment and add extensions to service section in collector-edge-config.yaml
chore(logs): remove outdated collector.json log file
feat(compose): expose zpages extension port 55679 in compose.yml
fix(compose): uncomment and correct OTLP receiver ports in compose.yml

--- a/opentelemetry/collector-cloud/config/collector-cloud-config.yaml
+++ b/opentelemetry/collector-cloud/config/collector-cloud-config.yaml
@@ -5,7 +5,9 @@ receivers:
   otlp:
     protocols:
       grpc:
+        endpoint: 0.0.0.0:4217
       http:
+        endpoint: 0.0.0.0:4218
         cors:
           allowed_origins:
             - "*"
@@ -56,16 +58,16 @@ service:
         - batch
       exporters: 
         - file
-        - otlp
+#        - otlp
     logs:
       receivers: [otlp]
       processors: [batch]
       exporters: 
         - file
-        - otlp
+#        - otlp
     traces:
       receivers: [otlp]
       processors: [batch]
       exporters: 
         - file
-        - otlp
+#        - otlp
