--- a/opentelemetry/compose.yml
+++ b/opentelemetry/compose.yml
@@ -12,6 +12,7 @@ services:
     ports:
       - 4317:4317 # OTLP gRPC receiver
       - 4318:4318 # OTLP http receiver
+      - 55679:55679 # zpages extension
     networks:
       - otel
 
@@ -25,8 +26,8 @@ services:
       - ./collector-cloud/logs/collector.json:/logs/collector.json
     ports:
       - "55681:55681" # OTLP HTTP port for external access
-#      - 4217:4317 # OTLP gRPC receiver
-#      - 4218:4318 # OTLP http receiver
+      - 4217:4317 # OTLP gRPC receiver
+      - 4218:4318 # OTLP http receiver
 #      - 1888:1888 # pprof extension
 #      - 8888:8888 # Prometheus metrics exposed by the Collector
 #      - 8889:8889 # Prometheus exporter metrics
